--- a/overlays/skia-mingw/gn/skia/BUILD.gn
+++ b/overlays/skia-mingw/gn/skia/BUILD.gn
@@ -666,7 +666,7 @@ config("debug_symbols") {
 config("no_rtti") {
   if (sanitize != "ASAN") {  # -fsanitize=vptr requires RTTI
     if (is_win && !is_mingw) {
-      cflags_cc = [ "/GR-" ]
+      cflags_cc = [ "/GR" ]
     } else {
       cflags_cc = [ "-fno-rtti" ]
       cflags_objcc = cflags_cc
