fix trailing slash in cmake install

--- a/overlays/skia/CMakeLists.txt
+++ b/overlays/skia/CMakeLists.txt
@@ -25,7 +25,7 @@ else()
         DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
 
     # without the trailing slash it puts 'include' inside of skia
-    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include
+    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
         DESTINATION ${CMAKE_INSTALL_PREFIX}/include/skia)
 endif()
 
