--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -33,6 +33,37 @@
             }
         },
         {
+            "label": "build-ssh-server",
+            "type": "shell",
+			"options": {
+                "cwd": "${workspaceFolder}/../ion/build"
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared",
+                "group": "build0",
+                "clear": true
+            },
+			"isBackground": false,
+			"problemMatcher": ["$gcc"],
+            "windows": {
+                "command": "msbuild ion.sln /t:ssh-server"
+            },
+            "osx": {
+                "command": "make ssh-server -j16"
+            },
+            "linux": {
+                "command": "make ssh-server -j16",
+                "options":{
+                    "env":{"VERBOSE":"1"}
+                }
+            }
+        },
+        {
             "label": "build-lambda",
             "type": "shell",
 			"options": {
