get rid of non exported mbed symbol

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -87,5 +87,6 @@
         "future": "cpp",
         "regex": "cpp"
     },
-    "cmake.configureOnOpen": false
+    "cmake.configureOnOpen": false,
+    "C_Cpp.errorSquiggles": "enabled"
 }
