--- a/project.json
+++ b/project.json
@@ -49,17 +49,19 @@
             "name":     "libssh",
             "version":  "0.8.4",
             "commit":   "5d792a3b5a5fc2331cb52d6febdd886c5df580e3",
-            "url":      "https://git.libssh.org/projects/libssh.git/",
+            "url":      "https://git.libssh.org/projects/libssh.git",
             "cmake":{
+                "target": "ssh",
                 "args": [
                     "-DBUILD_SHARED_LIBS=OFF",
                     "-DBUILD_STATIC_LIB=ON",
                     "-DWITH_MBEDTLS=ON",
-                    "-DMBEDTLS_ROOT_DIR=%PREFIX%/../../extern/mbedtls",
-                    "-DMBEDTLS_INCLUDE_DIR=%PREFIX%/../../extern/mbedtls/include",
+                    "-DMBEDTLS_ROOT_DIR=/home/kalen/src/prefix/extern/mbedtls",
+                    "-DMBEDTLS_LIBRARIES=/home/kalen/src/prefix/install/native/lib",
+                    "-DMBEDTLS_INCLUDE_DIR=/home/kalen/src/prefix/extern/mbedtls/include",
                     "-DWITH_ZLIB=OFF",
-                    "-DZLIB_ROOT_DIR=%PREFIX%/../../extern/zlib",
-                    "-DWITH_SERVER=ON"
+                    "-DWITH_SERVER=ON",
+                    "-DCMAKE_INSTALL_PREFIX=/home/kalen/src/prefix/install/native"
                 ]
             }
         },
