--- a/project.json
+++ b/project.json
@@ -56,6 +56,7 @@
                     "-DBUILD_SHARED_LIBS=OFF",
                     "-DBUILD_STATIC_LIB=ON",
                     "-DWITH_MBEDTLS=ON",
+                    "-DWITH_GSSAPI=OFF",
                     "-DMBEDTLS_ROOT_DIR=%EXTERN%/mbedtls",
                     "-DMBEDTLS_LIBRARIES=%PREFIX%/lib",
                     "-DMBEDTLS_INCLUDE_DIR=%PREFIX%/include",
