fix up several libraries including mbedtls / ssh on windows; work on /MT flag; remove pthreads-w32 which has issues with mbedtls

--- a/overlays/libssh/src/CMakeLists.txt
+++ b/overlays/libssh/src/CMakeLists.txt
@@ -334,7 +334,9 @@ endif (WITH_SYMBOL_VERSIONING AND HAVE_LD_VERSION_SCRIPT AND ABIMAP_FOUND)
 
 # This gets built as a static library, if -DBUILD_SHARED_LIBS=OFF is passed to
 # cmake.
-add_library(ssh ${libssh_SRCS})
+add_library(ssh2 STATIC agent2.c)
+
+add_library(ssh STATIC ${libssh_SRCS})
 target_compile_options(ssh
                        PRIVATE
                            ${DEFAULT_C_COMPILE_FLAGS})
@@ -352,7 +354,6 @@ target_link_libraries(ssh
 
 if (WIN32 AND NOT BUILD_SHARED_LIBS)
     target_compile_definitions(ssh PUBLIC "LIBSSH_STATIC")
-    target_compile_options(ssh PUBLIC /MT)
 endif ()
 
 add_library(ssh::ssh ALIAS ssh)
@@ -386,7 +387,7 @@ if (MINGW)
 endif ()
 
 
-install(TARGETS ssh
+install(TARGETS ssh ssh2
         EXPORT libssh-config
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
