--- a/project.json
+++ b/project.json
@@ -35,21 +35,13 @@
             "commit":   "bb40886d43b5fcbcdfb5587a2d20db418622990a",
             "platforms": ["win"]
         },
-        
-        {
-            "name":     "pthread-w32",
-            "version":  "3.1.0",
-            "commit":   "73024cf",
-            "url":      "https://github.com/GerHobbelt/pthread-win32",
-            "platforms": ["win"]
-        }, 
         {
             "name":     "mbedtls",
             "version":  "3.4.0",
             "commit":   "1873d3b",
             "url":      "https://github.com/Mbed-TLS/mbedtls",
             "cmake": {
-                "args-win": ["-DENABLE_TESTING=0", "-DMSVC_STATIC_RUNTIME=1", "-DLINK_WITH_PTHREAD=1"],
+                "args-win": ["-DENABLE_TESTING=0", "-DMSVC_STATIC_RUNTIME=1"],
                 "args-mac": ["-DENABLE_TESTING=1"]
             }
         },
@@ -58,50 +50,7 @@
             "version":  "0.8.4",
             "commit":   "5d792a3b5a5fc2331cb52d6febdd886c5df580e3",
             "url":      "https://git.libssh.org/projects/libssh.git",
-            "cmake":{
-                "target": "ssh",
-                "args": [
-                    "-DBUILD_SHARED_LIBS=OFF",
-                    "-DBUILD_STATIC_LIB=ON",
-                    "-DWITH_MBEDTLS=ON",
-                    "-DWITH_GSSAPI=OFF",
-                    "-DMBEDTLS_ROOT_DIR=%EXTERN%/mbedtls",
-                    "-DMBEDTLS_LIBRARIES=%PREFIX%/lib",
-                    "-DMBEDTLS_INCLUDE_DIR=%PREFIX%/include",
-                    "-DWITH_ZLIB=OFF",
-                    "-DWITH_SERVER=ON"
-                ],
-                "args-win": [
-                    "-DBUILD_SHARED_LIBS=OFF",
-                    "-DBUILD_STATIC_LIB=ON",
-                    "-DWITH_MBEDTLS=ON",
-                    "-DWITH_GSSAPI=OFF",
-                    "-DMBEDTLS_ROOT_DIR=%EXTERN%/mbedtls",
-                    "-DMBEDTLS_LIBRARIES=%PREFIX%/lib",
-                    "-DMBEDTLS_INCLUDE_DIR=%PREFIX%/include",
-                    "-DCMAKE_USE_WIN32_THREADS_INIT=1",
-                    "-DWITH_ZLIB=OFF",
-                    "-DWITH_SERVER=ON"
-                ]
-            }
-        },
-        {
-            "name":     "wolfssl",
-            "version":  "5.6.3",
-            "commit":   "3b3c175",
-            "url":      "https://github.com/wolfSSL/wolfssl",
-            "cmake": {
-                "args": ["-DWOLFSSL_DTLS=1",
-                         "-DWOLFSSL_TLS13=1",
-                         "-DWOLFSSL_DTLS13=1",
-                         "-DWOLFSSL_DTLS_CID=1",
-                         "-DWOLFSSL_OPENSSLALL=1", "-DBUILD_SHARED_LIBS=0",
-                         "-DWOLFSSL_CRYPT_TESTS=0",
-                         "-DWOLFSSL_CRYPT_TESTS_LIBS=0",
-                         "-DWOLFSSL_CRYPT_TESTS=0",
-                         "-DWOLFSSL_DEBUG=1"]
-            },
-            "platforms":["none"]
+            "resource": true
         },
         {
             "name":     "juice",
@@ -153,15 +102,13 @@
             "name":     "shine",
             "version":  "3.1.1",
             "url":      "https://github.com/toots/shine",
-            "commit":   "97f188e",
-            "platforms": []
+            "commit":   "97f188e"
         },
         {
             "name":     "speexdsp",
             "version":  "1.2.1",
             "url":      "https://github.com/xiph/speexdsp",
-            "commit":   "1b28a0f",
-            "platforms": []
+            "commit":   "1b28a0f"
         },
         {
             "name":     "opusenc",
