--- a/project.json
+++ b/project.json
@@ -3,7 +3,63 @@
     "version":"dev",
     "import": [
         "mx",
-        "vulkan",
+        {
+            "name":     "zlib",
+            "version":  "1.2.13",
+            "commit":   "04f42ce",
+            "url":      "https://github.com/madler/zlib"
+        },
+        {
+            "name":     "libpng",
+            "version":  "1.6.39",
+            "commit":   "07b8803",
+            "url":      "https://github.com/glennrp/libpng",
+            "cmake": {
+                "args": ["-DPNG_STATIC=1"]
+            }
+        },
+        {
+            "name":     "glfw",
+            "version":  "3.3.8",
+            "commit":   "7482de6",
+            "url":      "https://github.com/glfw/glfw",
+            "cmake": {
+                "args-win": ["-DCMAKE_C_FLAGS=/MT","-DUSE_MSVC_RUNTIME_LIBRARY_DLL=0"]
+            }
+        },
+        {
+            "name":     "fmt",
+            "version":  "10.1.1",
+            "commit":   "f5e5435",
+            "url":      "https://github.com/fmtlib/fmt",
+            "platforms": ["win","lin"]
+        },
+        {
+            "name":     "tinygltf",
+            "version":  "2.8.15",
+            "commit":   "acf1e8a",
+            "url":      "https://github.com/syoyo/tinygltf",
+            "platforms": ["win","lin"]
+        },
+        {
+            "name":     "nvpro_core",
+            "version":  "1",
+            "commit":   "775b17ef7c7e270731e61d82c5f6e08be9caa64e",
+            "url":      "https://github.com/nvpro-samples/nvpro_core",
+            "resource": true,
+            "platforms": ["win","lin"],
+            "script":    ["python3", "adjust-headers.py"]
+        },
+        {
+            "name":     "vk_video_samples",
+            "version":  "1",
+            "commit":   "b36f79c1756456ee5e8316c084a41f44e3c244b4",
+            "url":      "https://github.com/nvpro-samples/vk_video_samples",
+            "platforms": ["win","lin"],
+            "cmake": {
+                "path":"vk_video_encoder"
+            }
+        },
         {
             "name":     "oniguruma",
             "version":  "6.9.8",
