add functionality to skia for svg

--- a/overlays/skia/CMakeLists.txt
+++ b/overlays/skia/CMakeLists.txt
@@ -27,6 +27,10 @@ else()
     # without the trailing slash it puts 'include' inside of skia
     install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include
         DESTINATION ${CMAKE_INSTALL_PREFIX}/include/skia/)
+
+    # needed for svg header
+    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/modules
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/include/skia/)
 endif()
 
 # the bootstrap (made with all) depends on build to run
