CMake-compatible build for Linux/Mac (Windows required now) -- Also needs x264 built prior

--- a/project.json
+++ b/project.json
@@ -71,6 +71,12 @@
             }
         },
         {
+            "name":     "FFmpeg",
+            "version":  "6.2",
+            "url":      "https://github.com/FFmpeg/FFmpeg",
+            "commit":   "44e9cccffa6eef7fee8662f9e9bd88e3b04b0724"
+        },
+        {
             "name":     "gsl",
             "version":  "2.7",
             "url":      "https://github.com/ampl/gsl",
