--- a/project.json
+++ b/project.json
@@ -71,12 +71,6 @@
             }
         },
         {
-            "name":     "FFmpeg",
-            "version":  "6.2",
-            "url":      "https://github.com/FFmpeg/FFmpeg",
-            "commit":   "44e9cccffa6eef7fee8662f9e9bd88e3b04b0724"
-        },
-        {
             "name":     "gsl",
             "version":  "2.7",
             "url":      "https://github.com/ampl/gsl",
@@ -92,6 +86,30 @@
                 "args": ["-DOPUS_DISABLE_INTRINSICS=1", "-DOPUS_BUILD_SHARED_LIBRARY=0"],
                 "path": "."
             }
+        },
+        {
+            "name":     "minih264",
+            "version":  "1.0.0",
+            "url":      "https://github.com/lieff/minih264",
+            "commit":   "b0baea7"
+        },
+        {
+            "name":     "fdk-aac",
+            "version":  "v2.0.2",
+            "url":      "https://github.com/mstorsjo/fdk-aac",
+            "commit":   "8264e376ea6f2fdaa3813ff1a8463e368d95083c"
+        },
+        {
+            "name":     "libebml",
+            "version":  "release-1.4.4",
+            "url":      "https://github.com/Matroska-Org/libebml",
+            "commit":   "2d5c11c"
+        },
+        {
+            "name":     "libmatroska",
+            "version":  "release-1.7.2",
+            "url":      "https://github.com/Matroska-Org/libmatroska",
+            "commit":   "44aefa8ff53562367100619cb79c949b2bb6b87e"
         },
         {
             "name":     "depot_tools",
