--- a/project.json
+++ b/project.json
@@ -78,16 +78,6 @@
             "platforms": ["lin", "mac"]
         },
         {
-            "name":     "opus",
-            "version":  "1.4",
-            "url":      "https://github.com/xiph/opus",
-            "commit":   "82ac57d",
-            "cmake": {
-                "args": ["-DOPUS_DISABLE_INTRINSICS=1", "-DOPUS_BUILD_SHARED_LIBRARY=0"],
-                "path": "."
-            }
-        },
-        {
             "name":     "minih264",
             "version":  "1.0.0",
             "url":      "https://github.com/lieff/minih264",
@@ -108,10 +98,13 @@
             "commit":   "8264e376ea6f2fdaa3813ff1a8463e368d95083c"
         },
         {
-            "name":     "libwebm",
-            "version":  "1.0.0.31",
-            "url":      "https://github.com/webmproject/libwebm",
-            "commit":   "6745fd2"
+            "name":     "mp4v2",
+            "version":  "2.1.3",
+            "url":      "https://github.com/enzo1982/mp4v2",
+            "commit":   "86b5aaf",
+            "cmake": {
+                "args": ["-DBUILD_SHARED=No", "-DBUILD_UTILS=No"]
+            }
         },
         {
             "name":     "depot_tools",
@@ -129,7 +122,7 @@
         {
             "name":     "pthread-w32",
             "version":  "3.1.0",
-            "commit":   "73024cf",
+            "commit":   "a301ede",
             "url":      "https://github.com/GerHobbelt/pthread-win32",
             "platforms": ["win"]
         },
@@ -177,25 +170,6 @@
             }
         },
         {
-            "name":     "ogg",
-            "version":  "1.3.5",
-            "url":      "https://github.com/xiph/ogg",
-            "commit":   "e1774cd",
-            "cmake": {
-                "args-win": ["-DCMAKE_C_FLAGS=/MT"]
-            }
-        },
-        {
-            "name":     "opusfile",
-            "version":  "0.12",
-            "url":      "https://github.com/xiph/opusfile",
-            "commit":   "9d718345ce03b2fad5d7d28e0bcd1cc69ab2b166",
-            "cmake": {
-                "args": ["-DOP_DISABLE_HTTP=Yes","-DOP_DISABLE_DOCS=Yes","-DOP_DISABLE_EXAMPLES=Yes"],
-                "path": "."
-            }
-        },
-        {
             "name":     "shine",
             "version":  "3.1.1",
             "url":      "https://github.com/toots/shine",
@@ -206,16 +180,6 @@
             "version":  "1.2.1",
             "url":      "https://github.com/xiph/speexdsp",
             "commit":   "1b28a0f"
-        },
-        {
-            "name":     "opusenc",
-            "version":  "0.21",
-            "url":      "https://github.com/xiph/libopusenc",
-            "commit":   "b19e1b14",
-            "cmake": {
-                "args": ["-DOP_DISABLE_HTTP=Yes","-DOP_DISABLE_DOCS=Yes"],
-                "path": "."
-            }
         },
         {
             "name":     "bzip2",
