--- a/project.json
+++ b/project.json
@@ -88,7 +88,8 @@
             "name":     "x264",
             "version":  "6.0.0",
             "url":      "https://github.com/mirror/x264",
-            "commit":   "eaa68fa"
+            "commit":   "eaa68fa",
+            "platforms": ["none"]
         },
         {
             "name":     "h264bsd",
@@ -101,7 +102,10 @@
             "name":     "fdk-aac",
             "version":  "v2.0.2",
             "url":      "https://github.com/mstorsjo/fdk-aac",
-            "commit":   "8264e376ea6f2fdaa3813ff1a8463e368d95083c"
+            "commit":   "8264e376ea6f2fdaa3813ff1a8463e368d95083c",
+            "cmake": {
+                "args": ["-DBUILD_SHARED_LIBS=No"]
+            }
         },
         {
             "name":     "mp4v2",
