--- a/project.json
+++ b/project.json
@@ -174,7 +174,10 @@
             "name":     "plog",
             "version":  "1.1.9",
             "url":      "https://github.com/SergiusTheBest/plog",
-            "commit":   "f471494"
+            "commit":   "f471494",
+            "cmake": {
+                "args": ["-DPLOG_BUILD_SAMPLES=No"]
+            }
         },
         {
             "name":     "usrsctp",
@@ -204,6 +207,46 @@
             "url":      "https://gitlab.com/bzip2/bzip2",
             "cmake":    {
                 "args": ["-DENABLE_STATIC_LIB=Yes"]
+            }
+        },
+        {
+            "name":     "ogg",
+            "version":  "1.3.5",
+            "url":      "https://github.com/xiph/ogg",
+            "commit":   "e1774cd",
+            "notes":    "for webrtc",
+            "cmake": {
+                "args-win": ["-DCMAKE_C_FLAGS=/MT"]
+            }
+        },
+        {
+            "name":     "opus",
+            "version":  "1.4",
+            "url":      "https://github.com/xiph/opus",
+            "commit":   "82ac57d",
+            "cmake": {
+                "args": ["-DOPUS_DISABLE_INTRINSICS=1", "-DOPUS_BUILD_SHARED_LIBRARY=0"],
+                "path": "."
+            }
+        },
+        {
+            "name":     "opusfile",
+            "version":  "0.12",
+            "url":      "https://github.com/xiph/opusfile",
+            "commit":   "9d718345ce03b2fad5d7d28e0bcd1cc69ab2b166",
+            "cmake": {
+                "args": ["-DOP_DISABLE_HTTP=Yes","-DOP_DISABLE_DOCS=Yes","-DOP_DISABLE_EXAMPLES=Yes"],
+                "path": "."
+            }
+        },
+        {
+            "name":     "opusenc",
+            "version":  "0.21",
+            "url":      "https://github.com/xiph/libopusenc",
+            "commit":   "b19e1b14",
+            "cmake": {
+                "args": ["-DOP_DISABLE_HTTP=Yes","-DOP_DISABLE_DOCS=Yes"],
+                "path": "."
             }
         }
     ]
