update libpng and zlib overlays to simplify their names on all os's

--- a/project.json
+++ b/project.json
@@ -15,7 +15,7 @@
             "commit":   "07b8803",
             "url":      "https://github.com/glennrp/libpng",
             "cmake": {
-                "args": ["-DPNG_STATIC=1"]
+                "args": ["-DPNG_STATIC=On"]
             }
         },
         {
