--- a/project.json
+++ b/project.json
@@ -71,6 +71,27 @@
             }
         },
         {
+            "name":     "x264",
+            "version":  "6.0.0",
+            "url":      "https://github.com/mirror/x264",
+            "commit":   "eaa68fa"
+        },
+        {
+            "name":     "fdk-aac",
+            "version":  "v2.0.2",
+            "url":      "https://github.com/mstorsjo/fdk-aac",
+            "commit":   "8264e376ea6f2fdaa3813ff1a8463e368d95083c",
+            "cmake": {
+                "args": ["-DBUILD_SHARED_LIBS=No"]
+            }
+        },
+        {
+            "name":     "FFmpeg",
+            "version":  "6.2",
+            "url":      "https://github.com/FFmpeg/FFmpeg",
+            "commit":   "44e9cccffa6eef7fee8662f9e9bd88e3b04b0724"
+        },
+        {
             "name":     "gsl",
             "version":  "2.7",
             "url":      "https://github.com/ampl/gsl",
@@ -85,27 +106,11 @@
             "resource": true
         },
         {
-            "name":     "x264",
-            "version":  "6.0.0",
-            "url":      "https://github.com/mirror/x264",
-            "commit":   "eaa68fa",
-            "platforms": ["none"]
-        },
-        {
             "name":     "h264bsd",
             "version":  "1.0.0",
             "url":      "https://github.com/oneam/h264bsd",
             "commit":   "42bcb5d",
             "resource": true
-        },
-        {
-            "name":     "fdk-aac",
-            "version":  "v2.0.2",
-            "url":      "https://github.com/mstorsjo/fdk-aac",
-            "commit":   "8264e376ea6f2fdaa3813ff1a8463e368d95083c",
-            "cmake": {
-                "args": ["-DBUILD_SHARED_LIBS=No"]
-            }
         },
         {
             "name":     "mp4v2",
