--- a/project.json
+++ b/project.json
@@ -153,6 +153,12 @@
             "resource": true
         },
         {
+            "name":     "gpac",
+            "url":      "https://github.com/gpac/gpac",
+            "version":  "2.2.2",
+            "commit":   "b34e38516"
+        },
+        {
             "name":     "mp4v2",
             "version":  "2.1.3",
             "url":      "https://github.com/enzo1982/mp4v2",
