add webgpu mdule; improve style bootstrapping; add an AppType (work in progress; App will be redone with webgpu changes); for now we are using webgpu in skia but we are going to want to build it in prefix and have skia use prefix lib/include for dawn

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,6 +31,30 @@
             "justMyCode": true
         },
         {
+            "name": "webgpu-test",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/../hyperspace/build/webgpu-test",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/../hyperspace/build",
+            "environment": [],
+            "MIMode": "gdb",
+            "presentation": {
+                "hidden": false,
+                "group": "",
+                "order": 1,
+            },
+            "windows":{
+                "type": "cppvsdbg",
+                "program": "${workspaceFolder}/../hyperspace/build/Debug/webgpu-test",
+                "cwd": "${workspaceFolder}/../hyperspace/build"
+            },
+            "osx": {
+                "MIMode": "lldb"
+            }
+        },
+        {
             "name": "lambda",
             "type": "cppdbg",
             "request": "launch",
