--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,37 @@
 	"version": "2.0.0",
 	"tasks": [
         {
+            "label": "build-webgpu-test",
+            "type": "shell",
+			"options": {
+                "cwd": "${workspaceFolder}/../hyperspace/build"
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared",
+                "group": "build0",
+                "clear": true
+            },
+			"isBackground": false,
+			"problemMatcher": ["$gcc"],
+            "windows": {
+                "command": "msbuild hyperspace.sln /t:webgpu-test"
+            },
+            "osx": {
+                "command": "make webgpu-test -j16"
+            },
+            "linux": {
+                "command": "make webgpu-test -j16",
+                "options":{
+                    "env":{"VERBOSE":"1"}
+                }
+            }
+        },
+        {
             "label": "build-ux-app",
             "type": "shell",
 			"options": {
